add gallery to gift list

--- a/gift_list.html
+++ b/gift_list.html
@@ -83,72 +83,28 @@
 					</div>
 				</div>
 				<div class="row row-bottom-padded-md">
-					<div class="col-md-12">
-						<ul id="tebw-gallery-list">
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site2.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site2.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site3.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site3.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site4.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site4.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site5.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site5.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site6.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site6.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site7.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site7.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site8.jpg) no-repeat; background-position: center; "> 
-								<a href="images/gallery/site8.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site9.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site9.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site10.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site10.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site11.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site11.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site12.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site12.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site13.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site13.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site14.jpg) no-repeat; background-position: center; "> 
-								<a href="images/gallery/site14.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site15.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site15.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site16.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site16.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site17.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site17.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site18.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site18.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site19.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site19.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site20.jpg) no-repeat; background-position: center; "> 
-								<a href="images/gallery/site20.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site21.jpg) no-repeat; background-position: center; ">
-								<a href="images/gallery/site21.jpg"></a>
-							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background: url(images/gallery/site22.jpg) no-repeat; background-position: center; "> 
-								<a href="images/gallery/site22.jpg"></a>
-							</li>
-						</ul>		
+					<div class="galleria" style="min-height: 600px;">
+						<img src="images/gallery/site2.jpg">
+						<img src="images/gallery/site3.jpg">
+						<img src="images/gallery/site4.jpg">
+						<img src="images/gallery/site5.jpg">
+						<img src="images/gallery/site6.jpg">
+						<img src="images/gallery/site7.jpg">
+						<img src="images/gallery/site8.jpg"> 
+						<img src="images/gallery/site9.jpg">
+						<img src="images/gallery/site10.jpg">
+						<img src="images/gallery/site11.jpg">
+						<img src="images/gallery/site12.jpg">
+						<img src="images/gallery/site13.jpg">
+						<img src="images/gallery/site14.jpg"> 
+						<img src="images/gallery/site15.jpg">
+						<img src="images/gallery/site16.jpg">
+						<img src="images/gallery/site17.jpg">
+						<img src="images/gallery/site18.jpg">
+						<img src="images/gallery/site19.jpg">
+						<img src="images/gallery/site20.jpg"> 
+						<img src="images/gallery/site21.jpg">
+						<img src="images/gallery/site22.jpg">
 					</div>
 				</div>
 			</div>
@@ -181,13 +137,8 @@
 						</p>
 					</div>
 				</div>
-
 			</div>
 		</footer>
-	</div>
-
-	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
 	
 	<!-- jQuery -->
@@ -203,11 +154,18 @@
 	<!-- countTo -->
 	<script src="js/jquery.countTo.js"></script>
 
+	<link type="text/css" rel="stylesheet" href="galleria/themes/classic/galleria.classic.min.css">
+	<script src="galleria/galleria-1.5.7.min.js"></script>
+	<script type="text/javascript" src="galleria/themes/classic/galleria.classic.min.js"></script>
+
 	<!-- Stellar -->
 	<script src="js/jquery.stellar.min.js"></script>
 	<!-- Magnific Popup -->
 	<script src="js/jquery.magnific-popup.min.js"></script>
 	<script src="js/magnific-popup-options.js"></script>
+
+	<!-- Gallery -->
+	<script src="js/gift_list.js"></script>
 
 	<!-- Main -->
 	<script src="js/main.js"></script>
