upated some texts and invitee list

--- a/dica_beleza.html
+++ b/dica_beleza.html
@@ -123,7 +123,7 @@
 				<div class="row copyright">
 					<div class="col-md-12 text-center">
 						<p>
-							<small class="block">© 2018 Copiado e alterado por Bruno</small>
+							<small class="block">© 2018 Copiado e alterado por Bruno e Thaís</small>
 						</p>
 					</div>
 				</div>
