--- a/gift_list.html
+++ b/gift_list.html
@@ -133,7 +133,7 @@
 				<div class="row copyright">
 					<div class="col-md-12 text-center">
 						<p>
-							<small class="block">© 2018 Copiado e alterado por Bruno</small>
+							<small class="block">© 2018 Copiado e alterado por Bruno e Thaís</small>
 						</p>
 					</div>
 				</div>
