--- a/rsvp.html
+++ b/rsvp.html
@@ -79,7 +79,7 @@
 				<form id="rsvp-form">
 					<h2>Confirme aqui sua presença!</h2>
 
-					<p>Após informar o id recebido em seu convite, marque os convidados que comparecerão ao casamento. Caso deseja adicionar algum acompanhante, clique no botão <span class="icon-plus"/></p>
+					<p>Após informar o id recebido em seu convite, marque os convidados que comparecerão ao casamento (A carinha feliz significa presença confirmada). Caso deseja adicionar algum acompanhante, clique no botão <span class="icon-plus"/></p>
 						
 					<div class="form-group">
 						<label for="invt-id">ID do Convite</label>
@@ -111,7 +111,7 @@
 					</div>
 
 					<div class="form-group second-step">
-						<label for="music-request">Deseja contribuir para o reportório do DJ?</label>
+						<label for="music-request">Deseja indicar alguma musica para o DJ?</label>
 						<input type="text" class="form-control" id="music-request" name="music_request" placeholder="Ex: Evidências">
 					</div>
 
@@ -132,7 +132,7 @@
 				<div class="row copyright">
 					<div class="col-md-12 text-center">
 						<p>
-							<small class="block">© 2018 Copiado e alterado por Bruno</small>
+							<small class="block">© 2018 Copiado e alterado por Bruno e Thaís</small>
 						</p>
 					</div>
 				</div>
