new gift page and some more invitations

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 				</div>
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-12">
-						<ul id="tebw-gallery-list">
+						<ul class="tebw-gallery-list">
 							
 							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/dicas-beleza2.jpg); "> 
 								<a href="dica_beleza.html">
