--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-3 col-xs-5">
-						<div id="tebw-logo"><a href="index.html">T &amp; B<strong>.</strong></a></div>
+						<div id="tebw-logo"><a href="/">T &amp; B<strong>.</strong></a></div>
 					</div>
 					<div class="col-md-9 col-xs-7 text-right menu-1">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
+							<li class="active"><a href="/">Home</a></li>
 							<li class="has-dropdown">
 								<a>Utilidades</a>
 								<ul class="dropdown">
-									<li><a href="dica_beleza.html">Dicas de beleza</a></li>
-									<li><a href="onde_ficar.html">Onde ficar</a></li>
-									<li><a href="o_que_vestir.html">O que vestir</a></li>
+									<li><a href="dica_beleza">Dicas de beleza</a></li>
+									<li><a href="onde_ficar">Onde ficar</a></li>
+									<li><a href="o_que_vestir">O que vestir</a></li>
 								</ul>
 							</li>
-							<li><a href="gift_list.html">Presentes</a></li>
-							<li><a href="rsvp.html">RSVP</a></li>
+							<li><a href="gift_list">Presentes</a></li>
+							<li><a href="rsvp">RSVP</a></li>
 						</ul>
 					</div>
 				</div>
@@ -256,14 +256,14 @@
 						<ul class="tebw-gallery-list">
 							
 							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/dicas-beleza2.jpg); "> 
-								<a href="dica_beleza.html">
+								<a href="dica_beleza">
 									<div class="case-studies-summary">
 										<h2>Dicas de Beleza</h2>
 									</div>
 								</a>
 							</li>
 							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/onde-ficar2.jpg); ">
-								<a href="onde_ficar.html" class="color-2">
+								<a href="onde_ficar" class="color-2">
 									<div class="case-studies-summary">
 										<h2>Onde Ficar</h2>
 									</div>
@@ -272,7 +272,7 @@
 
 
 							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/o-que-vestir2.jpg); ">
-								<a href="o_que_vestir.html" class="color-3">
+								<a href="o_que_vestir" class="color-3">
 									<div class="case-studies-summary">
 										<h2>O que Vestir</h2>
 									</div>
@@ -295,7 +295,7 @@
 				</div>
 				<div class="row animate-box">
 					<div class="col-md-6 col-xs-12 col-md-offset-3">
-						<a href="rsvp.html" class="btn btn-default btn-block">Contem comigo</a>
+						<a href="rsvp" class="btn btn-default btn-block">Contem comigo</a>
 					</div>
 				</div>
 			</div>
