--- a/rsvp.html
+++ b/rsvp.html
@@ -58,21 +58,21 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-xs-5">
-					<div id="tebw-logo"><a href="index.html">T &amp; B<strong>.</strong></a></div>
+					<div id="tebw-logo"><a href="/">T &amp; B<strong>.</strong></a></div>
 				</div>
 				<div class="col-md-9 col-xs-7 text-right menu-1">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="/">Home</a></li>
 						<li class="has-dropdown">
 							<a>Utilidades</a>
 							<ul class="dropdown">
-								<li><a href="dica_beleza.html">Dicas de beleza</a></li>
-								<li><a href="onde_ficar.html">Onde ficar</a></li>
-								<li><a href="o_que_vestir.html">O que vestir</a></li>
+								<li><a href="dica_beleza">Dicas de beleza</a></li>
+								<li><a href="onde_ficar">Onde ficar</a></li>
+								<li><a href="o_que_vestir">O que vestir</a></li>
 							</ul>
 						</li>
-						<li><a href="gift_list.html">Presentes</a></li>
-						<li class="active"><a href="rsvp.html">RSVP</a></li>
+						<li><a href="gift_list">Presentes</a></li>
+						<li class="active"><a href="rsvp">RSVP</a></li>
 					</ul>
 				</div>
 			</div>
